# codex-telegram

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODEX.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  SYSTEMD_SETUP.md  pyproject.toml
.github/workflows/: ci.yml
config/: projects.example.yaml
docs/: configuration.md  development.md  project-overview.md  setup.md  tools.md
scripts/: codex_smoke.py
src/: __init__.py  exceptions.py  main.py
src/api/: __init__.py  auth.py  server.py
src/bot/: __init__.py  core.py  orchestrator.py
src/bot/features/: __init__.py  conversation_mode.py  file_handler.py  git_integration.py  image_handler.py  quick_actions.py  registry.py  session_export.py  voice_handler.py
src/bot/handlers/: callback.py  command.py  message.py
src/bot/middleware/: __init__.py  auth.py  rate_limit.py  security.py
src/bot/utils/: __init__.py  formatting.py  html_format.py  runtime_health.py  session_keys.py
src/codex/: __init__.py  exceptions.py  facade.py  sdk_integration.py  session.py  tool_authorizer.py
src/config/: __init__.py  environments.py  features.py  loader.py  settings.py
src/events/: __init__.py  bus.py  handlers.py  middleware.py  types.py
src/notifications/: __init__.py  service.py
src/projects/: __init__.py  registry.py  thread_manager.py
src/scheduler/: __init__.py  scheduler.py
src/security/: __init__.py  audit.py  auth.py  rate_limiter.py  validators.py
src/storage/: database.py  facade.py  models.py  repositories.py  session_storage.py
src/utils/: constants.py
tests/: conftest.py
tests/unit/: test_config.py  test_environments.py  test_exceptions.py  test_orchestrator.py
tests/unit/test_api/: test_auth.py  test_server.py
tests/unit/test_bot/: __init__.py  test_formatting.py  test_message_errors.py  test_middleware.py  test_runtime_health.py  test_session_keys.py  test_thread_mode_handlers.py
tests/unit/test_codex/: __init__.py  test_facade.py  test_monitor.py  test_sdk_integration.py  test_session.py
tests/unit/test_events/: test_bus.py  test_handlers.py  test_types.py
tests/unit/test_notifications/: test_service.py
tests/unit/test_projects/: test_registry.py  test_thread_manager.py
tests/unit/test_security/: __init__.py  test_audit.py  test_auth.py  test_rate_limiter.py  (+1 more)
(+3 files in other folders)
